# xrootd-client-plugin-radosfs

./: CMakeLists.txt  README.md
cmake/: FindLibRadosFS.cmake
etc/: CMakeLists.txt
etc/xrootd/client.plugins.d/: radosfs.conf
pkg/rhel/: xrootd-client-plugin-radosfs.spec.in
src/: CMakeLists.txt  XrdClRadosFS.cc  XrdClRadosFS.hh
